--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,13 @@
 buildscript {
     ext {
         compose_version = '1.2.0-beta01'
+        hilt_version = '2.41'
     }
     dependencies {
+        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        //Dagger - Hilt
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
         //Firebase
         classpath 'com.google.gms:google-services:4.3.10'
 
