--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,9 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
+    //Magterial Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha12'
