--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,9 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
+    //Coil
+    implementation 'io.coil-kt:coil-compose:2.0.0'
+
     //Magterial Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
