--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,11 +68,18 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
+    //JsonConverter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     //Dagger - Hilt
     implementation 'com.google.dagger:hilt-android:2.41'
-    //May need okkhttp also
-
-    // Dagger - Hilt
+    // Dagger - Hilt kapt
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     // implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
